--- a/portfolio2.html
+++ b/portfolio2.html
@@ -206,9 +206,9 @@
     <h2>Projects</h2>
     <ul>
       <li><strong><a href="https://github.com/seepanasateeshchandra/tic-tac-toe" target="_blank">Tic Tac Toe Console-Based Game</a></strong>: Java-based game using OOP principles. Includes game logic, win checks, and error handling.</li>
-      <li><strong><a href="https://github.com/yourusername/tic-tac-toe" target="_blank"></a>Library Management System</strong>: Developed a full-stack Library Management System using Java, Servlets ,Jsp,Html and Css, and MySQL to manage book inventory, users, and transactions.Applied role-based access control for admin and user functionalities.
+      <li><strong><a href="https://github.com/yourusername/tic-tac-toe" target="_blank">Library Management System</a></strong>: Developed a full-stack Library Management System using Java, Servlets ,Jsp,Html and Css, and MySQL to manage book inventory, users, and transactions.Applied role-based access control for admin and user functionalities.
           Focused on clean code architecture, exception handling, and secure CRUD operations for real-world applicability.</li>
-     <li><strong><a href="https://github.com/yourusername/tic-tac-toe" target="_blank"></a>Hotel Booking System Backend Project</strong>: Built a Hotel Booking System using Java, Spring Boot, and MySQL to manage hotels, rooms, users, and bookings efficiently.
+     <li><strong><a href="https://github.com/yourusername/tic-tac-toe" target="_blank">Hotel Booking System Backend Project</a></strong>: Built a Hotel Booking System using Java, Spring Boot, and MySQL to manage hotels, rooms, users, and bookings efficiently.
 Implemented core features like room search, availability check, booking, cancellation, and user registration/login.
 Developed RESTful APIs for smooth client-server interaction and ensured data consistency with JPA and Hibernate.
 Secured the application with Spring Security and JWT-based authentication with role-based access (admin/user).
