--- a/index.html
+++ b/index.html
@@ -206,10 +206,9 @@
     <h2>Projects</h2>
     <ul>
       <li><strong><a href="https://github.com/seepanasateeshchandra/tic-tac-toe" target="_blank">Tic Tac Toe Console-Based Game</a></strong>: Java-based game using OOP principles. Includes game logic, win checks, and error handling.</li>
-      <li><strong><a href="https://github.com/yourusername/tic-tac-toe" target="_blank"></a>Library Management System</strong>: Developed a full-stack Library Management System using Java, Servlets ,Jsp,Html and Css, and MySQL to manage book inventory, users, and transactions.Applied role-based access control for admin and user functionalities.
+      <li><strong><a href="https://github.com/seepanasateeshchandra/LibraryManagementProject.git" target="_blank">Library Management System</a></strong>: Developed a full-stack Library Management System using Java, Servlets ,Jsp,Html and Css, and MySQL to manage book inventory, users, and transactions.Applied role-based access control for admin and user functionalities.
           Focused on clean code architecture, exception handling, and secure CRUD operations for real-world applicability.</li>
-     <li><strong><a href="https://github.com/yourusername/tic-tac-toe" target="_blank"></a>Hotel Booking System Backend Project</strong>: Built a Hotel Booking System using Java, Spring Boot, and MySQL to manage hotels, rooms, users, and bookings efficiently.
-Implemented core features like room search, availability check, booking, cancellation, and user registration/login.
+     <li><strong><a href="https://github.com/seepanasateeshchandra/HotelManagementProject.git" target="_blank">Hotel Booking System Backend Project</a></strong>: 
 Developed RESTful APIs for smooth client-server interaction and ensured data consistency with JPA and Hibernate.
 Secured the application with Spring Security and JWT-based authentication with role-based access (admin/user).
 Emphasized modular design, validation, exception handling, and scalability for real-world deployment scenarios.</li>
@@ -244,7 +243,8 @@ Emphasized modular design, validation, exception handling, and scalability for r
     <h2>Contact</h2>
     <div class="contact-info">
       <p><strong>Address:</strong> Srikakulam, Andhra Pradesh 532005</p>
-      <p><strong>Phone:</strong> +91 6305336569</p>
+      <p><strong>Phone:</strong> +91 6305336569</p>Built a Hotel Booking System using Java, Spring Boot, and MySQL to manage hotels, rooms, users, and bookings efficiently.
+Implemented core features like room search, availability check, booking, cancellation, and user registration/login.
       <p><strong>Email:</strong> <a href="mailto:seepana2002@gmail.com">seepana2002@gmail.com</a></p>
       <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/sateesh-chandra-seepana-17598b328" target="_blank">linkedin.com/in/sateesh-chandra-seepana-17598b328</a></p>
       <p><strong>GitHub:</strong> <a href="https://github.com/seepanasateeshchandra" target="_blank">github.com/seepanasateeshchandra</a></p>
@@ -253,7 +253,7 @@ Emphasized modular design, validation, exception handling, and scalability for r
 
   <footer>
     <p>&copy; 2025 Sateesh Chandra Seepana</p>
-    <a href="/SATEESH_CHANDRA_Resume_8 (7).pdf" download>Download Resume</a>
+    <a href="/SATEESH_CHANDRA_Resume_8 (9).pdf" download>Download Resume</a>
   </footer>
 </body>
 </html>
