--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ Implemented core features like room search, availability check, booking, cancell
 
   <footer>
     <p>&copy; 2025 Sateesh Chandra Seepana</p>
-    <a href="/SATEESH_CHANDRA_Resume_8 (9).pdf" download>Download Resume</a>
+    <a href="/https://github.com/seepanasateeshchandra/MyPortfolio/blob/master/SATEESH_CHANDRA_Resume_8%20(9).pdf" download>Download Resume</a>
   </footer>
 </body>
 </html>
